Implement suggestion list